# EchoNote

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-meetfocus-implementation.md
docs/superpowers/specs/: 2026-04-10-meetfocus-design.md
echonote/: __init__.py  cli.py  config.py  recorder.py  summarizer.py  transcriber.py  writer.py
meetfocus/: __init__.py  cli.py  config.py  session.py  summarizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py  test_recorder.py  test_session.py  test_summarizer.py  test_transcriber.py  test_writer.py
