[project]
name = "echonote"
version = "0.1.0"
description = "Meeting audio recorder, transcriber, and AI summarizer for Obsidian"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "faster-whisper>=1.0",
    "watchdog>=4.0",
    "tomli-w>=1.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
echonote = "echonote.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
